fefactor: change how the user id is obtained, and create feature startQuiz (incomplete)
